<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ListTemplate</string>

    <!-- drawer menu part-->
    <string name="current_list">Current List</string>
    <string name="home">Home</string>
    <string name="browse_templates">Browse Templates</string>
    <string name="create_template">Create Template</string>
    <string name="settings">Settings</string>

    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="menuIcon">icon</string>

    <!-- home fragment part-->
    <string name="voice_input">Voice input</string>
    <string name="create_new_list">Create new list.</string>
    <string name="use_template">Use template.</string>
    <string name="started_on">Started on:</string>

    <!-- create list part-->
    <string name="create_list">Create List</string>
    <string name="untitled">Untitled 0</string>
    <string name="useButton"> Use </string>
    <string name="add_element">Add element</string>
    <string name="create_list_icon">create list icon</string>
    <string name="create_from_template_icon">create list from template</string>
    <string name="item_deleted">Item deleted</string>
    <string name="tap_to_undo">Tap to undo</string>

    <!-- use list part -->
    <string name="list_is_complete">The list is completed.</string>
    <string name="remove_list">Do you want to remove the list?</string>

    <!-- create template part -->
    <string name="save">Save</string>
    <string name="template_name">Template Name</string>
    <string name="description_hint">Please add a short description of the template you are trying to create. Don\'t
        forget to mention the purpose of the template
    </string>
    <string name="add_author">Add author name:</string>
    <string name="receive_mail">Willing to receive thank you e-mails:</string>
    <string name="share_template">Share this template online:</string>
    <string name="upload_picture">Upload background picture:</string>

    <!-- general -->
    <string name="thumbnail_photo">Thumbnail Photo</string>
    <string name="exampleTitle">In Use List Title 1</string>
    <string name="exampleStartedOn">Started on: 32.12.2112</string>
    <string name="exampleDescription">Description - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum convallis lobortis ornare. Morbi tempor non orci et accumsan. Proin laoreet.</string>
    <string name="element"> Element</string>
    <string name="undo_icon">Undo Icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
