<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/grayBlue"
             android:padding="5dp">

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listBackgroundPic"
            android:src="@drawable/mountain"
            android:scaleType="centerCrop"
            android:background="@color/white"
            android:alpha="0.2"
            android:contentDescription="@string/thumbnail_photo"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/topPart">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listTitle"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:inputType="text"
                    android:cursorVisible="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/template_name"/>
            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="-5dp"
                    android:paddingRight="-5dp"
                    android:text="@string/save"
                    android:textSize="18sp"
                    android:id="@+id/useListButton"
                    android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="2"
            android:gravity="top|left"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:hint="@string/description_hint"
        />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/authorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_author"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>
            <CheckBox
                    android:id="@+id/authorCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/receiveMailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_mail"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>
            <CheckBox
                    android:id="@+id/receiveMailCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>