<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/grayBlue"
             android:padding="5dp">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listBackgroundPic"
        android:src="@drawable/mountain"
        android:scaleType="centerCrop"
        android:background="@color/white"
        android:alpha="0.2"
        android:contentDescription="@string/thumbnail_photo"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/listImageView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/exampleTitle"
                android:id="@+id/listTitle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/listStarted"
                android:text="@string/exampleStartedOn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="9dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</FrameLayout>